Update the preview when editing/adding a gradient

BUG:437997