libs/ui/kis_control_frame.cpp
@@ -230,6 +230,8 @@ void KisControlFrame::createGradientsChooser(KisViewManager * view)
 
     m_gradientChooser->setCurrentItem(0);
 
+    qDebug() << m_gradientChooser->currentResource();
+
     if (m_gradientChooser->currentResource() && view->canvasResourceProvider())
         view->canvasResourceProvider()->slotGradientActivated(m_gradientChooser->currentResource());
 
